<resources>
    <string name="app_name">FD</string>
    <string name="title_home">Прогресс</string>
    <string name="title_dashboard">Блюда</string>
    <string name="title_notifications">Калькулятор КБЖУ</string>

    <string name="age_hint">20</string>
    <string name="height_hint">180</string>
    <string name="weight_hint">60</string>

    <string name="welcome">Пожалуйста, введите данные о себе для точного расчёта КБЖУ</string>
    <string name="age">Возраст</string>
    <string name="gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="activity">Образ жизни</string>
    <string name="goal">Цель</string>
    <string name="lose">Похудеть</string>
    <string name="save">Поддерживать форму</string>
    <string name="gain">Набрать вес</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="passive">Сидячий</string>
    <string name="two_times">2 тренировки в неделю</string>
    <string name="four_five_times">4-5 тренировок в неделю или активная работа</string>
    <string name="six_times">6 тренировок в неделю</string>
    <string name="everyday">Каждодневный тренинг</string>
    <string name="twice_a_day">2 тренировки в день</string>
    <string name="hard">Высокоинтенсивные тренировки или тяжёлый физический труд</string>

    <string name="calculate">Рассчитать КБЖУ</string>
    <string name="add_a_dish">Добавить</string>

    <string name="add">Добавить</string>
    <string name="add_welcome">Пожалуйста, введите название блюда, а также информацию о его энергетической ценности в 100 граммах.</string>
    <string name="dish">Название</string>
    <string name="cal">Энергетическая ценность (ккал)</string>
    <string name="pro">Белки</string>
    <string name="fat">Жиры</string>
    <string name="carb">Углеводы</string>

    <string name="dish_name_hint">Рожки сдобные (Магнит)</string>
    <string name="cal_hint">360</string>
    <string name="pro_hint">6.5</string>
    <string name="fat_hint">10</string>
    <string name="carb_hint">47</string>

    <string name="db_info">Database Info</string>
    <string name="norms_info">Ваша суточная норма КБЖУ</string>
    <string name="norms_prog">Ваш текущий прогресс:</string>
    <string name="added_dishes">Вы сегодня съели:</string>
    <string name="day_dish">Введите ID блюда из списка, а также его количество в граммах</string>
    <string name="db_drop">Удалить по ID</string>

    <string name="db_drop_hint">1</string>
    <string name="drop_by_id">Удалить</string>
    <string name="id_hint">ID</string>
    <string name="amount_hint">Количество в граммах</string>

</resources>