<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/scroll_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/welcome"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/age_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/age"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="20"
                android:ems="10"
                android:hint="@string/age_hint"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/gender_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/gender"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/gender_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/male_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>

            <TextView
                android:id="@+id/activity_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/activity"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/activity_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/passive_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/passive" />

                <RadioButton
                    android:id="@+id/two_times_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two_times" />

                <RadioButton
                    android:id="@+id/four_five_times_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/four_five_times" />

                <RadioButton
                    android:id="@+id/six_times_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/six_times" />

                <RadioButton
                    android:id="@+id/everyday_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/everyday" />

                <RadioButton
                    android:id="@+id/twice_a_day_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/twice_a_day" />

                <RadioButton
                    android:id="@+id/hard_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hard" />
            </RadioGroup>

            <TextView
                android:id="@+id/height_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/height"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/height_hint"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/weight_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/weight"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/weight_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/goal_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/goal"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/goal_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/lose_weight_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lose" />

                <RadioButton
                    android:id="@+id/save_weight_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />

                <RadioButton
                    android:id="@+id/gain_weight_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gain" />
            </RadioGroup>

            <Button
                android:id="@+id/calculate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="calculateCPFC"
                android:text="@string/calculate" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>